<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:focusableInTouchMode="true"
    android:paddingStart="30dp"
    android:paddingEnd="30dp"
    android:background="@color/colorPrimary"
    tools:context=".activities.SignupActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="@android:color/white"
        android:text="@string/new_user"
        android:padding="20dp"
        android:textSize="30sp"/>

    <LinearLayout
        android:layout_marginBottom="14dp"
        android:layout_marginTop="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">


        <TextView
            android:onClick="selectOption"
            android:id="@+id/option_student"
            android:background="@drawable/option_selected"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/student"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:padding="10dp"/>

        <TextView
            android:onClick="selectOption"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:id="@+id/option_instructor"
            android:background="@drawable/option_default"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:fontFamily="@font/quicksand_bold"
            android:text="@string/instructor"
            android:textColor="@android:color/white"
            android:textAlignment="center"
            android:padding="8dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signup_username"
            android:background="@drawable/plain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:inputType="textPersonName"
            android:drawableStart="@drawable/person"
            android:drawablePadding="10dp"
            android:hint="@string/username"
            android:fontFamily="@font/quicksand_regular"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signup_password"
            android:background="@drawable/plain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:hint="@string/password"
            android:fontFamily="@font/quicksand_regular"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="12dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/signup_password_confirm"
            android:background="@drawable/plain"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:inputType="textPassword"
            android:drawableStart="@drawable/lock"
            android:drawablePadding="10dp"
            android:hint="@string/re_enter_password"
            android:fontFamily="@font/quicksand_regular"
            android:textSize="15sp"
            android:textColor="@android:color/white"
            android:textColorHint="@color/colorAccent"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

    </LinearLayout>

    <Button
        android:onClick="SignUp"
        android:elevation="0dp"
        android:textSize="16sp"
        android:background="@drawable/button_accent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="@android:color/black"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:padding="12dp"
        android:layout_marginTop="44dp"/>

    <TextView
        android:onClick="goToLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_req"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:padding="16dp"
        android:fontFamily="@font/quicksand_semibold"
        android:textSize="15sp"/>



</LinearLayout>