<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    tools:context=".activities.DashboardActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:orientation="vertical"
        android:background="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/quicksand_bold"
            android:textSize="26sp"
            android:textAlignment="center"
            android:text="Dashboard"
            android:textColor="@android:color/white"
            android:padding="18sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/white"/>

        <LinearLayout
            android:padding="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/online_education"
                android:layout_marginStart="24dp"
                android:layout_marginEnd="44dp"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:text="Dhasmana"
                    android:drawableStart="@drawable/person2"
                    android:drawablePadding="12dp"
                    android:id="@+id/dashboard_username"/>

                <TextView
                    android:layout_marginTop="-8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:fontFamily="@font/quicksand_medium"
                    android:textColor="@color/colorAccent"
                    android:textSize="16sp"
                    android:text="Student"
                    android:drawableStart="@drawable/vpn_key"
                    android:drawablePadding="12dp"
                    android:id="@+id/dashboard_role"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <GridLayout
        android:visibility="gone"
        android:id="@+id/admin_dashboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:background="@color/colorAccent"
        android:columnCount="2">

        <LinearLayout
            android:onClick="courseManager"
            android:layout_margin="5dp"
            android:background="@drawable/dashboard_button"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/course_manage"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/manage_courses"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:onClick="StudentManagement"
            android:layout_margin="5dp"
            android:background="@drawable/dashboard_button"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/student_manage"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/manage_students"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:onClick="InstructorManagement"
            android:layout_margin="5dp"
            android:background="@drawable/dashboard_button"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/people"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/manage_instructors"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:onClick="logOut"
            android:layout_margin="5dp"
            android:background="@drawable/dashboard_button"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/exit_to_app"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/logout"
                android:textAlignment="center"/>

        </LinearLayout>

    </GridLayout>

    <GridLayout
        android:visibility="visible"
        android:id="@+id/student_dashboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:background="@color/colorAccent"
        android:columnCount="2">

        <LinearLayout
            android:onClick="StudentCourseManager"
            android:layout_margin="5dp"
            android:background="@drawable/dashboard_button"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/course_manage"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/view_courses"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:onClick="viewMyCourses"
            android:layout_margin="5dp"
            android:background="@drawable/dashboard_button"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/profile"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/colorPrimary"
                android:text="My Courses"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:onClick="logOut"
            android:layout_margin="5dp"
            android:background="@drawable/dashboard_button"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/exit_to_app"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/logout"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:visibility="gone"
            android:layout_margin="5dp"
            android:background="@drawable/dashboard_button"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/course_manage"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/colorPrimary"
                android:text="My Schedule"
                android:textAlignment="center"/>

        </LinearLayout>

    </GridLayout>

    <GridLayout
        android:visibility="gone"
        android:id="@+id/instructor_dashboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="5dp"
        android:background="@color/colorAccent"
        android:columnCount="2">

        <LinearLayout
            android:onClick="InstructorCourseManager"
            android:layout_margin="5dp"
            android:background="@drawable/dashboard_button"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/course_manage"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/view_courses"
                android:textAlignment="center"/>

        </LinearLayout>

        <LinearLayout
            android:onClick="logOut"
            android:layout_margin="5dp"
            android:background="@drawable/dashboard_button"
            android:layout_width="0dp"
            android:layout_columnWeight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="12dp"
            android:gravity="center">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:src="@drawable/exit_to_app"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:fontFamily="@font/quicksand_bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/logout"
                android:textAlignment="center"/>

        </LinearLayout>

    </GridLayout>

</LinearLayout>